2004-02-09  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/message-view/*: MessageView plugin is now loaded
	The menu items are still dummies.

2004-02-09  Naba Kumar  <naba@gnome.org>

	* Makefile.am, autogen.sh, configure.in: Added proper gtkdoc
	generation.
	
	* libanjuta/anjuta-preferences.h: Added some documentation.
	
	* libanjuta/anjuta-shell.h: Removed dead codes.
	
	* (removed) manuals/reference/gtkdoc-scangobj,
	manuals/reference/gtkdoc-scangobj.diff,
	manuals/reference/libanjuta/.cvsignore,
	manuals/reference/libanjuta/Makefile.am,
	manuals/reference/libanjuta/README.inline-doc,
	manuals/reference/libanjuta/README.sections,
	manuals/reference/libanjuta/libanjuta-docs.sgml,
	manuals/reference/libanjuta/libanjuta-sections.txt,
	manuals/reference/libanjuta/tmpl/anjuta-children.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-encodings.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-marshal.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-plugin-parser.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-plugin.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-preferences.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-shell.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-stock.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-ui.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-utils.sgml,
	manuals/reference/libanjuta/tmpl/defaults.sgml,
	manuals/reference/libanjuta/tmpl/fileselection.sgml,
	manuals/reference/libanjuta/tmpl/glue-factory.sgml,
	manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml,
	manuals/reference/libanjuta/tmpl/pixmaps.sgml,
	manuals/reference/libanjuta/tmpl/plugins.sgml,
	manuals/reference/libanjuta/tmpl/properties.sgml,
	manuals/reference/libanjuta/tmpl/resources.sgml: Fixed c++ compilation
	of scan program. Updated templates.

	plugins/editor/action-callbacks.c, plugins/editor/plugin.c: Fixed
	editor action callbacks data.
	
	plugins/editor/text_editor.c: Fixed scintilla height problem. Added
	scintilla object ref/unref.
